
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ pid_t ;


 int EXIT_FAILURE ;
 int PR_SET_PDEATHSIG ;
 int SIGKILL ;
 int WIFSIGNALED (int) ;
 int err (int ,char*) ;
 int errx (int ,char*) ;
 int execl (char*,char*,char*,int *) ;
 scalar_t__ fork () ;
 int kCrashDelay ;
 scalar_t__ link (char const*,char*) ;
 int prctl (int ,int ) ;
 char* tmpnam (int ) ;
 scalar_t__ unlink (char*) ;
 int usleep (int ) ;
 scalar_t__ waitpid (scalar_t__,int*,int ) ;

__attribute__((used)) static pid_t create_abrt_events(const char *name)
{
    char *newname;
    int status;
    pid_t child, pid;


    if ((child = fork()) != 0)
        return child;


    prctl(PR_SET_PDEATHSIG, SIGKILL);

    while (1) {

        newname = tmpnam(0);


        usleep(kCrashDelay);


        if ((pid = fork()) == 0) {
            if (link(name, newname) != 0) {
                err(EXIT_FAILURE, "failed to create a new exename");
            }


            execl(newname, newname, "crash", ((void*)0));


            err(EXIT_FAILURE, "unexpected execve failure");
        }


        if (waitpid(pid, &status, 0) != pid) {
            err(EXIT_FAILURE, "waitpid failure");
        }


        if (unlink(newname) != 0) {
            err(EXIT_FAILURE, "failed to clean up");
        }


        if (!WIFSIGNALED(status)) {
            errx(EXIT_FAILURE, "something went wrong");
        }
    }

    return child;
}
