; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_36747.c_create_abrt_events.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_36747.c_create_abrt_events.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PR_SET_PDEATHSIG = common dso_local global i32 0, align 4
@SIGKILL = common dso_local global i32 0, align 4
@kCrashDelay = common dso_local global i32 0, align 4
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"failed to create a new exename\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"crash\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"unexpected execve failure\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"waitpid failure\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"failed to clean up\00", align 1
@.str.5 = private unnamed_addr constant [21 x i8] c"something went wrong\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @create_abrt_events to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @create_abrt_events(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %7 = call i64 (...) @fork()
  store i64 %7, i64* %5, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i64, i64* %5, align 8
  ret i64 %10

11:                                               ; preds = %1
  %12 = load i32, i32* @PR_SET_PDEATHSIG, align 4
  %13 = load i32, i32* @SIGKILL, align 4
  %14 = call i32 @prctl(i32 %12, i32 %13)
  br label %15

15:                                               ; preds = %11, %57
  %16 = call i8* @tmpnam(i32 0)
  store i8* %16, i8** %3, align 8
  %17 = load i32, i32* @kCrashDelay, align 4
  %18 = call i32 @usleep(i32 %17)
  %19 = call i64 (...) @fork()
  store i64 %19, i64* %6, align 8
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %35

21:                                               ; preds = %15
  %22 = load i8*, i8** %2, align 8
  %23 = load i8*, i8** %3, align 8
  %24 = call i64 @link(i8* %22, i8* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = load i32, i32* @EXIT_FAILURE, align 4
  %28 = call i32 @err(i32 %27, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  br label %29

29:                                               ; preds = %26, %21
  %30 = load i8*, i8** %3, align 8
  %31 = load i8*, i8** %3, align 8
  %32 = call i32 @execl(i8* %30, i8* %31, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32* null)
  %33 = load i32, i32* @EXIT_FAILURE, align 4
  %34 = call i32 @err(i32 %33, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  br label %35

35:                                               ; preds = %29, %15
  %36 = load i64, i64* %6, align 8
  %37 = call i64 @waitpid(i64 %36, i32* %4, i32 0)
  %38 = load i64, i64* %6, align 8
  %39 = icmp ne i64 %37, %38
  br i1 %39, label %40, label %43

40:                                               ; preds = %35
  %41 = load i32, i32* @EXIT_FAILURE, align 4
  %42 = call i32 @err(i32 %41, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0))
  br label %43

43:                                               ; preds = %40, %35
  %44 = load i8*, i8** %3, align 8
  %45 = call i64 @unlink(i8* %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %50

47:                                               ; preds = %43
  %48 = load i32, i32* @EXIT_FAILURE, align 4
  %49 = call i32 @err(i32 %48, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0))
  br label %50

50:                                               ; preds = %47, %43
  %51 = load i32, i32* %4, align 4
  %52 = call i32 @WIFSIGNALED(i32 %51)
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %57, label %54

54:                                               ; preds = %50
  %55 = load i32, i32* @EXIT_FAILURE, align 4
  %56 = call i32 @errx(i32 %55, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.5, i64 0, i64 0))
  br label %57

57:                                               ; preds = %54, %50
  br label %15
}

declare dso_local i64 @fork(...) #1

declare dso_local i32 @prctl(i32, i32) #1

declare dso_local i8* @tmpnam(i32) #1

declare dso_local i32 @usleep(i32) #1

declare dso_local i64 @link(i8*, i8*) #1

declare dso_local i32 @err(i32, i8*) #1

declare dso_local i32 @execl(i8*, i8*, i8*, i32*) #1

declare dso_local i64 @waitpid(i64, i32*, i32) #1

declare dso_local i64 @unlink(i8*) #1

declare dso_local i32 @WIFSIGNALED(i32) #1

declare dso_local i32 @errx(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
